--- a/main.css
+++ b/main.css
@@ -27,3 +27,20 @@ li a:hover {
 
 li a.active{
 }
+
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  /* Centered text */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+  }
+  
