--- a/main.css
+++ b/main.css
@@ -33,6 +33,12 @@ li a.active{
     position: relative;
     text-align: center;
     color: white;
+    
+  }
+  
+  img {
+    width: 100%;
+    height: 100%;
   }
 
   /* Centered text */
@@ -41,6 +47,7 @@ li a.active{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 80px;
+    font-size: 5vw;
   }
+
   
