--- a/main.css
+++ b/main.css
@@ -28,27 +28,6 @@ li a:hover {
 li a.active{
 }
 
-
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-    
-  }
-  
-  img {
-    width: 100%;
-    height: 100%;
-  }
-
-  /* Centered text */
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5vw;
-    font-family:Cambria;
-  }
-
-  
+li a.glow{
+    background-color:cyan;
+}
