--- a/main.css
+++ b/main.css
@@ -31,3 +31,26 @@ li a.active{
 li a.glow{
     background-color:cyan;
 }
+
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+    
+  }
+  
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Centered text */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5vw;
+    font-family:Cambria;
+  }
