--- a/main.css
+++ b/main.css
@@ -1,12 +1,13 @@
+body{
+    margin: 0px;
+}
+
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
-    background-color: #333;
-    border-radius: 30px;
-    border: 3px solid black;
-    background: linear-gradient(to right,  #333, #333 25%, #111 75%, #000 100%  );
+    background-color: #111;
 }
 
 h1 {
@@ -25,22 +26,21 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family:Cambria;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 
 
 li a:hover {
-    background-color: #111;
+    background-color: rgb(4 170 109 / 0.19);
 }
 
 li a.active{
 }
 
-    li a.glow {
-        background-color: black;
-
-    }
+li a.glow {
+    background-color: #04AA6D;
+}
 
 
 .container {
@@ -54,7 +54,6 @@ li a.active{
 img {
     width: 100%;
     height: 100%;
-    border-radius: 30px;
 }
 
   /* Centered text */
@@ -66,6 +65,7 @@ img {
     font-size: 5vw;
     font-family:Cambria;
     color: white;
+
   }
 
 body {
