--- a/main.css
+++ b/main.css
@@ -1,5 +1,31 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0px;
+    height: 1500px; /* FOR TESTING !REMOVE! */
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #111;
+    max-height: 48px !important;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index:1;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
 }
 
 ul {
@@ -8,6 +34,8 @@ ul {
     padding: 0px;
     overflow: hidden;
     background-color: #111;
+    position:fixed;
+    top: 0;
 }
 
 h1 {
@@ -16,29 +44,12 @@ h1 {
     color: white;
 }
 
-li {
-    float: left;
-}
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 20px;
-}
-
-
-li a:hover {
+.navbar a:hover {
     background-color: rgb(4 170 109 / 0.19);
 }
 
-li a.active{
-}
-
-li a.glow {
+.navbar a.glow {
     background-color: #04AA6D;
 }
 
@@ -47,14 +58,7 @@ li a.glow {
     position: relative;
     text-align: center;
     color: white;
-    
-    
   }
-
-img {
-    width: 100%;
-    height: 100%;
-}
 
   /* Centered text */
 .centered {
@@ -70,4 +74,14 @@ img {
 
 body {
     background-color: #181818;
+}
+
+.homeButton {
+    height: 17px;
+    width: 20px;
+}
+
+.splashImg{
+    height: 100%;
+    width: 100%;
 }
