--- a/main.css
+++ b/main.css
@@ -86,18 +86,30 @@ body {
     width: 100%;
 }
 
-input[type=text], select {
+.contact {
+    background-color: red;
+    width: 50%;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+form {
+    padding: 0px 50px;
+}
+
+input[type=text], select, textarea {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
+    display: block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    resize: none;
 }
 
 input[type=submit] {
-    width: 100%;
+    width: 40%;
     background-color: white;
     color: black;
     padding: 14px 20px;
@@ -105,6 +117,18 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    
+}
+
+input[type=file] { /*This Needs Fixing - Tutorial: https://www.quirksmode.org/dom/inputfile.html */
+    width: 40%;
+    background-color: #04AA6D;
+    color: black;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    opacity: 100%;
 }
 
 input[type=submit]:hover {
@@ -113,4 +137,9 @@ input[type=submit]:hover {
 
 input[type=submit]:active{
     background-color: #04AA6D;
+}
+
+.message {
+    
+    
 }
